--- a/ExpenseManager.UnitTests/ExpenseManager.UnitTests.csproj
+++ b/ExpenseManager.UnitTests/ExpenseManager.UnitTests.csproj
@@ -12,5 +12,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExpenseManager\ExpenseManager.csproj" />
+  </ItemGroup>
 
 </Project>
